--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/main.css">
-    <title>стартовый шаблон</title>
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <title>Кыргыздипсервис</title>
 </head>
 <body>
     <div class="wrapper">
