--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <div class="wrapper">
-        
+    <header class="header">
+        <div class="container">
+            
+        </div>
+    </header>    
 
 
 <!-- конец фрапера -->
