--- a/index.html
+++ b/index.html
@@ -11,7 +11,52 @@
     <div class="wrapper">
     <header class="header">
         <div class="container">
-            
+            <div class="header__flex-container">
+                <div class="header__left">
+                    <a href="#" class="header__left-link">
+                        Южное представительство в г.ОШ
+                    </a>
+                </div>
+                <div class="header__rigth">
+                    <div class="hadeader__social">
+                        <ul class="social">
+                            <li class="social__item">
+                                <a href="#" class="social__link">
+                                    <svg class="social__link-fb" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#facebook-f-brands"></use>
+                                    </svg> 
+                                </a>
+                            </li>
+                            <li class="social__item">
+                                <a href="#" class="social__link">
+                                    <svg class="social__link-instagram" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#instagram-brands"></use>
+                                    </svg> 
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lang">
+                        <ul class="lang__list">
+                            <li class="lang__item">
+                                <a href="#" class="lang__link">
+                                    кыр
+                                </a>
+                            </li>
+                            <li class="lang__item">
+                                <a href="#" class="lang__link">
+                                    рус
+                                </a>
+                            </li>
+                            <li class="lang__item">
+                                <a href="#" class="lang__link">
+                                   ang
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </header>    
 
