--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header__rigth">
                     <div class="hadeader__social">
                         <ul class="social">
-                            <li class="social__item">
+                            <li class="social__item social__item--margin">
                                 <a href="#" class="social__link">
                                     <svg class="social__link-fb" aria-hidden="true">
                                         <use xlink:href="assets/img/sprite/sprite-icons.svg#facebook-f-brands"></use>
@@ -40,17 +40,17 @@
                         <ul class="lang__list">
                             <li class="lang__item">
                                 <a href="#" class="lang__link">
-                                    кыр
+                                    <span class="lang__color">кыр</span>/
+                                </a>                                
+                            </li>
+                            <li class="lang__item">
+                                <a href="#" class="lang__link">
+                                    <span class="lang__color lang__activ">рус</span>/
                                 </a>
                             </li>
                             <li class="lang__item">
                                 <a href="#" class="lang__link">
-                                    рус
-                                </a>
-                            </li>
-                            <li class="lang__item">
-                                <a href="#" class="lang__link">
-                                   ang
+                                    <span class="lang__color">ang</span>
                                 </a>
                             </li>
                         </ul>
