--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <header class="header">
         <div class="container">
-            <div class="header__flex-container">
+            <div class="header__top header__flex-container">
                 <div class="header__left">
                     <a href="#" class="header__left-link">
                         Южное представительство в г.ОШ
