разметку текста подправил

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,64 +8,91 @@
     <link rel="stylesheet" href="/assets/css/main.css">
     <title>Кыргыздипсервис</title>
 </head>
+
 <body>
     <div class="wrapper">
-    <header class="header">
-        <div class="container">
-            <div class="header__top header__flex-container">
-                <div class="header__left">
-                    <a href="#" class="header__left-link">
-                        Южное представительство в г.ОШ
-                    </a>
-                </div>
-                <div class="header__rigth">
-                    <div class="hadeader__social">
-                        <ul class="social">
-                            <li class="social__item social__item--margin">
-                                <a href="#" class="social__link">
-                                    <svg class="social__link-fb" aria-hidden="true">
-                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#facebook-f-brands"></use>
-                                    </svg> 
-                                </a>
-                            </li>
-                            <li class="social__item">
-                                <a href="#" class="social__link">
-                                    <svg class="social__link-instagram" aria-hidden="true">
-                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#instagram-brands"></use>
-                                    </svg> 
-                                </a>
-                            </li>
-                        </ul>
+        <div class="top-line">
+            <div class="container">
+                <div class="top-line__top top-line__flex-container">
+                    <div class="top-line__left">
+                        <a href="#" class="top-line__left-link">
+                            Южное представительство в г.ОШ
+                        </a>
                     </div>
-                    <div class="lang">
-                        <ul class="lang__list">
-                            <li class="lang__item">
-                                <a href="#" class="lang__link">
-                                    <span class="lang__color">кыр</span>/
-                                </a>                                
-                            </li>
-                            <li class="lang__item">
-                                <a href="#" class="lang__link">
-                                    <span class="lang__color lang__activ">рус</span>/
-                                </a>
-                            </li>
-                            <li class="lang__item">
-                                <a href="#" class="lang__link">
-                                    <span class="lang__color">ang</span>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="top-line__rigth">
+                        <div class="top-line__social">
+                            <ul class="social">
+                                <li class="social__item social__item--margin">
+                                    <a href="#" class="social__link">
+                                        <svg class="social__link-fb" aria-hidden="true">
+                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#facebook-f-brands">
+                                            </use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a href="#" class="social__link">
+                                        <svg class="social__link-instagram" aria-hidden="true">
+                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#instagram-brands"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="lang">
+                            <ul class="lang__list">
+                                <li class="lang__item">
+                                    <a href="#" class="lang__link">
+                                        <span class="lang__color">кыр</span>/
+                                    </a>
+                                </li>
+                                <li class="lang__item">
+                                    <a href="#" class="lang__link">
+                                        <span class="lang__color lang__activ">рус</span>/
+                                    </a>
+                                </li>
+                                <li class="lang__item">
+                                    <a href="#" class="lang__link">
+                                        <span class="lang__color">ang</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </header>    
+        <header class="header__bottom">
+            <div class="container">
+                <div class="header__bottom-flex-container">
+                    <div class="header__bottom-left">
+                        <div class="logo">
+                            <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                        </div>
+                        <div class="logo-text">
+                            <div class="logo-text__title">
+                                кыргыздипсервис
+                            </div>
+                            <div class="logo-text__subtitle">
+                                при мид кыргызской республики
+                            </div>
+                        </div>
+                    </div>
+                    <div class="header__bottom-midlle">
 
+                    </div>
+                    <div class="header__bottom-rigth">
 
-<!-- конец фрапера -->
-    </div> 
+                    </div>
+                </div>
+            </div>
+        </header>
+
+        <!-- конец фрапера -->
+    </div>
     <footer class="footer">
 
     </footer>
 </body>
+
 </html>
