--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
                             </div>
                             <form action="" class="search">
                                 <input type="search" name="" id="" class="search__input" placeholder="Поиск по сайту">
-                                <button></button>
+                                <button class="btn">
+                                    <svg class="mail-icon" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#search-solid"></use>
+                                    </svg>
+                                </button>
                             </form>
                         </div>
                     </div>
