--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
                 <div class="header__bottom-flex-container">
                     <div class="header__bottom-left">
                         <div class="logo">
-                            <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                            <a href="#" class="logo__link">
+                                <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                            </a>
                         </div>
                         <div class="logo-text">
                             <div class="logo-text__title">
@@ -92,8 +94,13 @@
                                 <svg class="mail-icon" aria-hidden="true">
                                     <use xlink:href="assets/img/sprite/sprite-icons.svg#envelope-regular"></use>
                                 </svg>
+                                <div class="adress__mail-text">
+                                    kdskg@mail.ru
+                                </div>
                             </div>
-                            <form action="" class="search">
+                    
+                        </div>
+                        <form action="" class="search">
                                 <input type="search" name="" id="" class="search__input" placeholder="Поиск по сайту">
                                 <button class="btn">
                                     <svg class="mail-icon" aria-hidden="true">
@@ -101,7 +108,6 @@
                                     </svg>
                                 </button>
                             </form>
-                        </div>
                     </div>
                     <div class="header__bottom-rigth">
 
