--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                         </div>
                         <form action="" class="search">
                                 <input type="search" name="" id="" class="search__input" placeholder="Поиск по сайту">
-                                <button class="btn">
-                                    <svg class="mail-icon" aria-hidden="true">
+                                <button class="btn-search">
+                                    <svg class="search-icon" aria-hidden="true">
                                         <use xlink:href="assets/img/sprite/sprite-icons.svg#search-solid"></use>
                                     </svg>
                                 </button>
