выравнивание шапки по центру

--- a/index.html
+++ b/index.html
@@ -110,7 +110,20 @@
                             </form>
                     </div>
                     <div class="header__bottom-rigth">
-
+                        <div class="basket-service">
+                            <div class="basket-service__text">
+                                Корзина услуг
+                            </div>
+                            <div class="basket-service__pic">
+                                <a href="#" class="basket-service__link"data-count="0">
+                                        <svg class="basket-service__icon" aria-hidden="true">
+                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#cart-arrow-down-solid">
+                                            </use>
+                                        </svg>
+                                    </a>
+                            </div>
+                           
+                        </div>
                     </div>
                 </div>
             </div>
