конец стилизации шапки сайта

--- a/index.html
+++ b/index.html
@@ -66,17 +66,19 @@
             <div class="container">
                 <div class="header__bottom-flex-container">
                     <div class="header__bottom-left">
-                        <div class="logo">
-                            <a href="#" class="logo__link">
-                                <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
-                            </a>
-                        </div>
-                        <div class="logo-text">
-                            <div class="logo-text__title">
-                                кыргыздипсервис
+                        <div class="logo-block">
+                            <div class="logo">
+                                <a href="#" class="logo__link">
+                                    <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
+                                </a>
                             </div>
-                            <div class="logo-text__subtitle">
-                                при мид кыргызской республики
+                            <div class="logo-text">
+                                <div class="logo-text__title">
+                                    кыргыздипсервис
+                                </div>
+                                <div class="logo-text__subtitle">
+                                    при мид кыргызской республики
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -98,16 +100,16 @@
                                     kdskg@mail.ru
                                 </div>
                             </div>
-                    
+
                         </div>
                         <form action="" class="search">
-                                <input type="search" name="" id="" class="search__input" placeholder="Поиск по сайту">
-                                <button class="btn-search">
-                                    <svg class="search-icon" aria-hidden="true">
-                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#search-solid"></use>
-                                    </svg>
-                                </button>
-                            </form>
+                            <input type="search" name="" id="" class="search__input" placeholder="Поиск по сайту">
+                            <button class="btn-search">
+                                <svg class="search-icon" aria-hidden="true">
+                                    <use xlink:href="assets/img/sprite/sprite-icons.svg#search-solid"></use>
+                                </svg>
+                            </button>
+                        </form>
                     </div>
                     <div class="header__bottom-rigth">
                         <div class="basket-service">
@@ -115,14 +117,14 @@
                                 Корзина услуг
                             </div>
                             <div class="basket-service__pic">
-                                <a href="#" class="basket-service__link"data-count="0">
-                                        <svg class="basket-service__icon" aria-hidden="true">
-                                            <use xlink:href="assets/img/sprite/sprite-icons.svg#cart-arrow-down-solid">
-                                            </use>
-                                        </svg>
-                                    </a>
+                                <a href="#" class="basket-service__link" data-count="0">
+                                    <svg class="basket-service__icon" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#cart-arrow-down-solid">
+                                        </use>
+                                    </svg>
+                                </a>
                             </div>
-                           
+
                         </div>
                     </div>
                 </div>
