начало стилизации меню

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
                 </div>
             </div>
         </header>
-
+        <nav class="nav">
+            
+        </nav>
         <!-- конец фрапера -->
     </div>
     <footer class="footer">
