анимация и линки на телефон и почту

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                                     <img src="/assets/img/logo/logo.png" alt="logo" class="log__pic">
                                 </a>
                             </div>
-                            <div class="logo-text">
+                            <a href="#" class="logo-text">
                                 <div class="logo-text__title">
                                     кыргыздипсервис
                                 </div>
                                 <div class="logo-text__subtitle">
                                     при мид кыргызской республики
                                 </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="header__bottom-midlle">
@@ -89,7 +89,9 @@
                                     <use xlink:href="assets/img/sprite/sprite-icons.svg#phone-solid"></use>
                                 </svg>
                                 <div class="adress__phone-text">
-                                    996 (312) 66-55-44
+                                    <a href="tel:+996312665544" class="address_phone-link">
+                                            996 (312) 66-55-44
+                                    </a>
                                 </div>
                             </div>
                             <div class="adress__mail">
@@ -97,7 +99,9 @@
                                     <use xlink:href="assets/img/sprite/sprite-icons.svg#envelope-regular"></use>
                                 </svg>
                                 <div class="adress__mail-text">
-                                    kdskg@mail.ru
+                                    <a href="mailto:kdskg@mail.ru" class="adress__mail-link">
+                                        kdskg@mail.ru
+                                    </a>                                   
                                 </div>
                             </div>
 
@@ -131,7 +135,42 @@
             </div>
         </header>
         <nav class="nav">
-            
+            <div class="container">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="#" class="nav__link"> 
+                         <span class="nav__animate">
+                                Главная
+                         </span>   
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <span class="nav__animate">Услуги </span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <span class="nav__animate">Новости</span>
+                            </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <span class="nav__animate">Объвление</span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <span class="nav__animate">О компании</span>
+                        </a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="#" class="nav__link">
+                            <span class="nav__animate">Контакты</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
         <!-- конец фрапера -->
     </div>
