начало разметки стилей под левое меню

--- a/index.html
+++ b/index.html
@@ -172,6 +172,30 @@
                 </ul>
             </div>
         </nav>
+        <div class="flex-content">
+            <aside class="sidbar-block">
+                <div class="sidbar__title">
+                    <svg class="sidbar-icon" aria-hidden="true">
+                        <use xlink:href="assets/img/sprite/sprite-icons.svg#bars-solid"></use>
+                    </svg>
+                    <span class="sidbar__text">
+                        Услуги КДС
+                    </span>                    
+                </div>
+                <div class="sidbar__nav">
+                    <ul class="sidbar__list">
+                        <li class="sidbar__item">
+                            <a href="#" class="sidbar__link">
+
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </aside>
+            <main class="main-content">
+
+            </main>
+        </div>
         <!-- конец фрапера -->
     </div>
     <footer class="footer">
