добавление выравнине по центру

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 </svg>
                                 <div class="adress__phone-text">
                                     <a href="tel:+996312665544" class="address_phone-link">
-                                            996 (312) 66-55-44
+                                        996 (312) 66-55-44
                                     </a>
                                 </div>
                             </div>
@@ -101,7 +101,7 @@
                                 <div class="adress__mail-text">
                                     <a href="mailto:kdskg@mail.ru" class="adress__mail-link">
                                         kdskg@mail.ru
-                                    </a>                                   
+                                    </a>
                                 </div>
                             </div>
 
@@ -138,10 +138,10 @@
             <div class="container">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="#" class="nav__link"> 
-                         <span class="nav__animate">
+                        <a href="#" class="nav__link">
+                            <span class="nav__animate">
                                 Главная
-                         </span>   
+                            </span>
                         </a>
                     </li>
                     <li class="nav__item">
@@ -152,7 +152,7 @@
                     <li class="nav__item">
                         <a href="#" class="nav__link">
                             <span class="nav__animate">Новости</span>
-                            </a>
+                        </a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">
@@ -172,29 +172,31 @@
                 </ul>
             </div>
         </nav>
-        <div class="flex-content">
-            <aside class="sidbar-block">
-                <div class="sidbar__title">
-                    <svg class="sidbar-icon" aria-hidden="true">
-                        <use xlink:href="assets/img/sprite/sprite-icons.svg#bars-solid"></use>
-                    </svg>
-                    <span class="sidbar__text">
-                        Услуги КДС
-                    </span>                    
-                </div>
-                <div class="sidbar__nav">
-                    <ul class="sidbar__list">
-                        <li class="sidbar__item">
-                            <a href="#" class="sidbar__link">
+        <div class="content-block">
+            <div class="container">
+                <aside class="sidbar-block">
+                    <div class="sidbar__title">
+                        <svg class="sidbar-title__icon" aria-hidden="true">
+                            <use xlink:href="assets/img/sprite/sprite-icons.svg#bars-solid"></use>
+                        </svg>
+                        <span class="sidbar__text">
+                            Услуги КДС
+                        </span>
+                    </div>
+                    <div class="sidbar__nav">
+                        <ul class="sidbar__list">
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
 
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </aside>
-            <main class="main-content">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </aside>
+                <main class="main-content">
 
-            </main>
+                </main>
+            </div>
         </div>
         <!-- конец фрапера -->
     </div>
