стилизация меню нижнего

--- a/index.html
+++ b/index.html
@@ -187,7 +187,12 @@
                         <ul class="sidbar__list">
                             <li class="sidbar__item">
                                 <a href="#" class="sidbar__link">
-
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Туризм
+                                    </span>
                                 </a>
                             </li>
                         </ul>
