--- a/index.html
+++ b/index.html
@@ -176,9 +176,11 @@
             <div class="container">
                 <aside class="sidbar-block">
                     <div class="sidbar__title">
+
                         <svg class="sidbar-title__icon" aria-hidden="true">
                             <use xlink:href="assets/img/sprite/sprite-icons.svg#bars-solid"></use>
                         </svg>
+
                         <span class="sidbar__text">
                             Услуги КДС
                         </span>
@@ -195,11 +197,100 @@
                                     </span>
                                 </a>
                             </li>
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Перевод документов
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Разработка договоров
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Бронирование отелей
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Туры по кыргызстану
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- второе меню нижнее -->
+                    <div class="sidbar__title">
+
+                        <svg class="sidbar-title__icon" aria-hidden="true">
+                            <use xlink:href="assets/img/sprite/sprite-icons.svg#bars-solid"></use>
+                        </svg>
+
+
+                        <span class="sidbar__text">
+                            Дипломатические миссии
+                        </span>
+                    </div>
+                    <div class="sidbar__nav">
+                        <ul class="sidbar__list">
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
+                                    <div class="sidbar__icon-pic"></div>
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Список дипломатических миссий
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Футбол
+                                    </span>
+                                </a>
+                            </li>
+                            <li class="sidbar__item">
+                                <a href="#" class="sidbar__link">
+                                    <svg class="sidbar-title__icon-caret" aria-hidden="true">
+                                        <use xlink:href="assets/img/sprite/sprite-icons.svg#caret-right-solid"></use>
+                                    </svg>
+                                    <span class="sidbar__text sidbar--color">
+                                        Памятка водителям
+                                    </span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </aside>
                 <main class="main-content">
+                    <div class="slaider">
 
+                    </div>
                 </main>
             </div>
         </div>
