начало написание слайдера

--- a/index.html
+++ b/index.html
@@ -298,7 +298,9 @@
                     </aside>
                     <main class="main-content">
                         <div class="slaider">
-
+                            <div class="slaider__wrapper">
+                                <img src="/assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
+                            </div>
                         </div>
                     </main>
                 </div>
