Первая стилизация слайдера

--- a/index.html
+++ b/index.html
@@ -300,6 +300,9 @@
                         <div class="slaider">
                             <div class="slaider__wrapper">
                                 <img src="/assets/img/foto/sl.jpg" alt="slaider" class="slaider__pic">
+                                <span class="slaider__title">
+                                    Туры по кыргызстану
+                                </span>
                             </div>
                         </div>
                     </main>
