--- a/index.html
+++ b/index.html
@@ -305,6 +305,13 @@
                                 </span>
                             </div>
                         </div>
+                        <div class="catalog">
+                            <div class="title-block">
+                                <h1 class="title">
+                                    Каталог услуг   
+                                </h1>
+                            </div>
+                        </div>
                     </main>
                 </div>
 
