--- a/index.html
+++ b/index.html
@@ -311,6 +311,58 @@
                                     Каталог услуг   
                                 </h1>
                             </div>
+                            <div class="catalog-block">
+                                <ul class="catalog__list">
+                                    <li class="catalog__item">
+                                        <a href="#" class="catalog__link">
+                                            <img src="/assets/img/catalog/avto.jpg" alt="catalog-pic" class="catalog__pic">
+                                            <div class="catalog__text">
+                                                Автотранспортные услуги
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <a href="#" class="catalog__link">
+                                            <img src="/assets/img/catalog/home.jpg" alt="catalog-pic" class="catalog__pic">
+                                            <div class="catalog__text">
+                                                Риэлтовские услуги
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <a href="#" class="catalog__link">
+                                            <img src="/assets/img/catalog/air.jpg" alt="catalog-pic" class="catalog__pic">
+                                            <div class="catalog__text">
+                                                Авиакасса
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <a href="#" class="catalog__link">
+                                            <img src="/assets/img/catalog/passport.jpg" alt="catalog-pic" class="catalog__pic">
+                                            <div class="catalog__text">
+                                                Консульские услуги
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <a href="#" class="catalog__link">
+                                            <img src="/assets/img/catalog/turizm.jpg" alt="catalog-pic" class="catalog__pic">
+                                            <div class="catalog__text">
+                                                Туры по Кыргызстану
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li class="catalog__item">
+                                        <a href="#" class="catalog__link">
+                                            <img src="/assets/img/catalog/gruzovik_perevozka_mashina.jpg" alt="catalog-pic" class="catalog__pic">
+                                            <div class="catalog__text">
+                                                Грузоперевозки
+                                            </div>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </main>
                 </div>
