стилизиция заголовка новостей

--- a/index.html
+++ b/index.html
@@ -364,6 +364,25 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="new">
+                            <div class="new-title">
+                                <h2 class="new-title__start">
+                                  Новости  
+                                </h2>
+                                <div class="new-title__block">
+                                    <a href="#" class="new-title__link">
+                                            читать все новости 
+                                    </a>
+                                </div>
+                            </div>
+                            <ul class="new__list">
+                                <li class="new__item">
+                                    <a href="#" class="new__link">
+
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </main>
                 </div>
 
