--- a/index.html
+++ b/index.html
@@ -378,7 +378,25 @@
                             <ul class="new__list">
                                 <li class="new__item">
                                     <a href="#" class="new__link">
-
+                                        <div class="new__wrapper-pic">
+                                            <img src="/assets/img/foto/foot.jpg" alt="news-pic" class="new__pic">
+                                        </div>
+                                        <div class="new-desc__block">
+                                            <div class="new-desc__title">
+                                                Благотворительный турнир по мини футболу среди дипломатического корпуса аккредитованных в КР
+                                            </div>
+                                            <div class="new-desc__text">
+                                                29 сентября 2018 года состоялся благотворительный турнир по мини футболу среди дипломатического корпуса аккредитованных в КР, и приуроченный к празднованию Дня независимости Кыргызской Республики. В турнире приняли участие нижеследующие команды
+                                            </div>
+                                            <div class="new-desc__bottom">
+                                                <div class="new-desc__data">
+                                                    05.04.2019
+                                                </div>
+                                                <span class="new-desc__bottom-span">
+                                                    читать
+                                                </span> 
+                                            </div>
+                                        </div>
                                     </a>
                                 </li>
                             </ul>
